--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -3,10 +3,10 @@ on:
   # Run only when pushing to master branch, and making PRs
   push:
     branches:
-      - master
+      - '*'
   pull_request:
 jobs:
-  build:
+  example:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
