--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -9,12 +9,14 @@ jobs:
   checks:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - uses: cachix/install-nix-action@v18
+      - uses: actions/checkout@v3
+      - name: Install Nix
+        uses: DeterminateSystems/nix-installer-action@main
+      - uses: cachix/cachix-action@v12
         with:
-          extra_nix_config: |
-            experimental-features = nix-command flakes
-            access-tokens = github.com=${{ secrets.GITHUB_TOKEN }}
+          name: srid
+      - name: Build 🔨
+        run: nix run github:srid/nixci
       - name: Test example
         id: example
         run: |
@@ -28,8 +30,4 @@ jobs:
           cd $TEMP_DIR
           nix flake init -t $FLAKE
           nix develop --override-input mission-control path:${FLAKE} -c , fmt
-      - name: Flake checks 🧪
-        run: |
-          # Because 'nix flake check' is not system-aware
-          # See https://srid.ca/haskell-template/checks
-          nix run nixpkgs#sd 'systems = nixpkgs.lib.systems.flakeExposed' 'systems = [ "x86_64-linux" ]' flake.nix
+
