--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -10,11 +10,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-      # Don't upgrade Nix until https://github.com/srid/nixci/issues/35 is fixed
-      - uses: cachix/install-nix-action@v22
-      - uses: cachix/cachix-action@v12
-        with:
-          name: srid
+      - name: Install Nix
+        uses: DeterminateSystems/nix-installer-action@main
       - name: Build 🔨
         run: nix run github:srid/nixci build
       - name: Test example
